# Gen_AI

./: README.md
crewai_projects/demo_app/: README.md  pyproject.toml  report.md
crewai_projects/demo_app/src/demo_app/: crew.py  main.py
crewai_projects/social_media_management_analytics/: README.md  pyproject.toml
crewai_projects/social_media_management_analytics/src/social_media_management_analytics_automation/: crew.py  main.py
crewai_projects/social_media_management_analytics/src/social_media_management_analytics_automation/config/: agents.yaml  tasks.yaml
